[package]
name = "solana-jsx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
esbuild-rs = "0.13.8"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18.4"
solana-sdk = "1.18.4"
solana-transaction-status = "1.18.4"
spl-memo = "4.0.0"
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
